[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[package]
name = "bevygame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
thiserror = "2.0.3"

[features]
debugging = []